[package]
name = "clipstory"
version = "1.0.0"
description = "A Tauri App you can use to keep track of things in your clipboard history."
authors = ["Robert Chapman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard = "=1.1.4"
tokio = "1.39.2"
clipboard = "0.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
